public/styles.css
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

html {
  font-size: 62.5%;
}

body {
  box-sizing: border-box;
  position: relative;
}

/* img {
  max-width: 100%;
  max-height: 100%;
  display: block;
} */

#app {
  left: 50%;
  position: absolute;
  width: 75vw;
  transform: translateX(-50%);
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: lightslategray;
}

.logo {
  margin: .5rem 0 .5rem 2rem;
  height: 4rem;
  cursor: pointer;
}

.search {
  margin-right: 2rem;
  height: 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}

.search-input {
  height: inherit;
  outline: none;
  font-size: 1rem;
}

.search-btn {
  height: 1.75rem;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  outline: none;
  right: 3px;
  position: absolute;
  border: none
}

.search-icon {
  height: 1rem;
}

.q-and-a-widget {
  display: flex;
  flex-flow: column wrap;
  border: 1px solid red;
}
.helpful-btn,
.add-answer-btn,
.report-btn,
.add-question-btn,
.more-questions-btn,
.more-answers-btn,
.more-answers-btn {
  margin: 5px;
  padding: 0 2px 0 2px;
  border: 1px solid black;
  max-width: 100px;
  text-align: center;
}
.user-info {
  margin: 5px;
  padding: 0 2px 0 2px;
  border: 1px solid black;
}

.container {
  margin: 5px;
}
.questions-and-answers {
  display: flex;
  flex-flow: column nowrap;
}
.question-and-answer-container {
  display: flex;
  flex-flow: column nowrap;
}
.question-item {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
}
.answer-header {
  display: flex;
  flex-flow: column nowrap;
  align-items: flex-start;
}
.answer-list {
  display: flex;
  flex-flow: row nowrap;
}
.interaction {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
}
.no-questions {
  color: gray;
  text-emphasis-style: sesame;
}
.search-bar {
  width: auto;
  display: flex;
  justify-content: space-around;
}
.search-bar input {
  width: 100%;
  margin: 5px;
  padding: 5px;
}

.photo-list {
  display: flex;
  flex-flow: row wrap;
  max-width: 90%;
  max-height: 90%;
}

.photo-list img {
  margin: 10px;
  max-width: 25%;
  max-height: 25%;
}

/* OVERVIEW========================================= */

.overview-widget {
  text-align: left;
  margin: 40px;
  border-color: cadetblue;
  border-style: solid;
}

.overview-widget-productInfo {
  font-size: large;
  min-height: 150px;
  width: 340px;
  margin: 20px;
  list-style: none;
  border: 1px solid #77777769;
  background-color: #fdfdfd;
  border-radius: 4px;
  padding: 30px 50px 0px 50px;
}

.carousel-list {
  width: 100%;
  overflow: hidden;
  margin: auto;
}

.related-list {
  min-height: 33vh;
}

 .slider-container {
  height: inherit;
  overflow-x: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0rem 2rem;
  padding: 3px;
  scroll-behavior: smooth;
}

 .slider-wrapper {
  height: inherit;
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
 }

 .btn {
  position: absolute;
  box-shadow: 0 0 6.1px 0.9px white;
  padding: 1px;
  cursor: pointer;
  width: 20px;
  height: 20px;
  background: black;
  text-align: center;
  color: white;
  border-radius: 50%;
  z-index: 10;
 }

 .prev {
  left: 1rem;
 }

 .next {
  right: 1rem;
 }

 .disable {
  opacity: 0.5;
  pointer-events: none;
 }

 /* ////////// */


.card {
  border: 1px solid black;
  height: 33vh;
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  width: 30%;
  margin-right: 1.5rem;
}

.card-display img {
  height: 20rem;
  width: 100%;
  /* object-fit: cover;
  object-position: bottom; */
}

.card-info {
  text-align: left;
}

.thumbnail {
  /* flex-shrink: 0; */
  padding: 5px 20px;
  width: 140px;
  height: 140px;
  object-fit: cover;
}

.gallery-img img {
  padding: 5px 20px;
  height: 40rem;
  object-position: center;
}

.stars-reviews {
  display: flex;
  justify-content: space-between;
}

.fa {
  padding-right: 10px;
}

